--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.10",
     "axios": "^1.12.1",
+    "cloudinary": "^2.7.0",
     "inngest": "^3.40.3",
     "mongoose": "^8.18.1",
     "moongoose": "^0.0.5",
